--- a/index.html
+++ b/index.html
@@ -74,7 +74,17 @@
             </div>
         </section>
 
-        
+        <section>
+            <div class="Inspiration">
+                <h1 class="title">My Inspiration</h1>
+            <p class="pera">Web development is a journey of creativity and logic, where every line of code can transform ideas into reality."</p>
+            </div>
+        <div class="video">
+            <iframe class="vid" width="1400" height="550"  src="https://www.youtube.com/embed/DGHn2uOAVCE?si=chh35N7E1bsduNA6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+        </section>
+
+
 
     </main>
 
