add my final assignment

--- a/index.html
+++ b/index.html
@@ -8,19 +8,12 @@
 </head>
 <body>
     <header>
-        <nav class="nav">
-            <ul>
-                <li>Awlad</li>
-                <li> <button>Doenload CV</button></li>
-            </ul>
-        </nav>
-
         <section class="banner">
             <div class="banner1">
                 <img class="banner-img" src="assets/Group.png" alt="">
                 <h1 class="banner-title">"In the near future, I hope to become a <br>Developer."</h1>
                 <p class="banner-description">Technological changes, increased demand, emerging markets, agile methodologies, and remote work becoming a norm, the future of software development looks worth exploring. These changes present opportunities for tomorrow's digital landscape, which software engineers will shape.</p>
-                <button class="btn">Contact with me</button>
+                <button class="btn" >Contact with me</button>
             </div>
 
         </section>
@@ -140,6 +133,16 @@
     </main>
 
     <footer>
+
+        <div class="footer">
+            <p class="Commitment">An Open Commitment by Awlad Hossain</p>
+            <div class="social-link">
+                <a href="https://www.facebook.com/" target="_blank"><img src="assets/facebook.png" alt=""></a>
+                <a href="https://github.com/" target="_blank"></a><img src="assets/github.png" alt="" >
+
+                <a href="https://bd.linkedin.com/" target="_blank"></a> <img src="assets/linkedin-icon 1.png" alt="">
+            </div>
+        </div>
 
     </footer>
 </body>
