--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
             <p class="Commitment">An Open Commitment by Awlad Hossain</p>
             <div class="social-link">
                 <a href="https://www.facebook.com/" target="_blank"><img src="assets/facebook.png" alt=""></a>
-                <a href="https://github.com/" target="_blank"></a><img src="assets/github.png" alt="" >
+                <a href="https://github.com/" target="_blank"><img src="assets/github.png" alt="" ></a>
 
-                <a href="https://bd.linkedin.com/" target="_blank"></a> <img src="assets/linkedin-icon 1.png" alt="">
+                <a href="https://bd.linkedin.com/" target="_blank"><img src="assets/linkedin-icon 1.png" alt=""></a>
             </div>
         </div>
 
